Fixed bug where hovering over skills would shift other elements, fixed path title margin, removed box-shadow when hovering over path titles

--- a/src/app/skill-tree/skill-tree.component.sass
+++ b/src/app/skill-tree/skill-tree.component.sass
@@ -38,7 +38,7 @@
 
 .grid-item:hover
   cursor: pointer
-  border: 5px solid black
+  box-shadow: 0 0 0 6px
 
 .grid-item:active
   color: green
@@ -47,9 +47,12 @@
   grid-area: path-title
   border: none
   text-align: center
+  margin-top: 10px
+  font-size: 40px
 
 .path-title:hover
   cursor: auto
+  box-shadow: none
 
 #skill-1
   grid-area: skill-1
